--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/img/logo.svg" alt="">
+        <div class="header--title-container">
+            <h1>La próxima revolución es el intercambio de criptomonedas</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header--button">Conoce nuestros planes <span>i</span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
