creación de segunda tabla

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <img src="./assets/img/logo.svg" alt="">
@@ -30,31 +34,61 @@
             <section class="main-tables-container">
                 <div class="main-currency-table">
                     <p class="currency-table--title"> Monedas </p>
-                    <div class="currency-table--container"> 
-                        <table> 
-                            <tr> 
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
                                 <td class="table__top-left">Bitcon </td>
                                 <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
                             </tr>
-                            <tr> 
+                            <tr>
                                 <td>Etherum</td>
                                 <td class="table__right">$0.07 <span class="up"></span></td>
                             </tr>
-                            <tr> 
+                            <tr>
                                 <td>Ripple</td>
                                 <td class="table__right">$2.17 <span class="down"></span></td>
                             </tr>
-                            <tr> 
+                            <tr>
                                 <td class="table__bottom-left">Stellar</td>
                                 <td class="table__bottom-right table__right">$4.96 <span class="up"></span></td>
                             </tr>
                         </table>
                     </div>
+
                     <div class="currency-table--date">
+                        <p>
+                            <b>Actualizado:</b> 20 de julio 23:45
+                        </p>
+                    </div>
+                    <!-- Segunda tabla -->
+                    <p class="currency-table--title-comisiones"> Comisiones </p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcon </td>
+                                <td class="table__top-right table__right">$1.96 </td>
+                            </tr>
+                            <tr>
+                                <td>Etherum</td>
+                                <td class="table__right">$0.07 </td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table__right">$2.17 </td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$4.96 </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date-comisiones">
                         <p>
                             <b>Actualizado:</b> 19 de julio 23:45
                         </p>
                     </div>
+                </div>
+
                 </div>
             </section>
         </section>
@@ -64,4 +98,5 @@
     </main>
     <footer></footer>
 </body>
+
 </html>
