--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
                     <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más
                         determinan el comportamiento.</p>
                 </article>
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-title">Ojo</p>
+                    <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más
+                        determinan el comportamiento.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="dollar"></span>
+                    <p class="product--card-title">Dolares</p>
+                    <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más
+                        determinan el comportamiento.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="check"></span>
+                    <p class="product--card-title">Check</p>
+                    <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más
+                        determinan el comportamiento.</p>
+                </article>
             </section>
         </section>
         <section></section>
